# email-spam-classifier

./: .gitignore  README.md  pyproject.toml
data/: sample.csv
src/spam_classifier/: cli.py  data.py  model.py
tests/: test_pipeline.py
