[project]
name = "email-spam-classifier"
version = "0.1.0"
description = "A simple TF-IDF + logistic regression spam classifier with evaluation and a CLI."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "scikit-learn>=1.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]